--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ body {
 
 .section-afisha-tabContent {
     width: 100%;
-    padding: 0 9%;
+    padding: 0 5%;
 }
 
 .spisok-month {
@@ -75,12 +75,17 @@ body {
 }
 
 .spisok-afisha {
+    margin: 5px 0;
     background-color: #292929;
     border-radius: 3px;
     display: flex;
     align-items: center;
-    margin: 5px 0;
     color: #b1b1b1;
+    transition: 0.75s ease;
+}
+.spisok-afisha:hover {
+    margin: 5px -2%;
+    transition: 0.75s ease;
 }
 
 .spisok-afisha-date {
@@ -128,6 +133,7 @@ body {
     font-family: FuturaPtLight sans-serif;
     text-align: right;
     padding: 0 20px;
+    font-size: 12px;
 }
 
 .spisok-afisha-description .fas,
@@ -139,7 +145,6 @@ body {
 .spisok-afisha-age {
     display: flex;
     align-self: flex-start;
-    flex-grow: 2;
     justify-content: flex-end;
     padding: 20px;
     font-size: 14px;
@@ -155,6 +160,7 @@ body {
 }
 
 .postery-card {
+    margin: 0 10px;
     max-width: 400px;
     background-color: #292929;
     border-radius: 10px !important;
