--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ body {
 .nav-tabs {
     border: none;
 }
+
 .nav-tabs .nav-link {
     border: none;
     padding-bottom: 18px;
@@ -54,7 +55,7 @@ body {
 .nav-tabs .nav-link.active {
     color: #f2f2f7 !important;
     font-weight: 600 !important;
-    border-bottom: 1px solid #f2f2f7 !important; 
+    border-bottom: 1px solid #f2f2f7 !important;
     background: none;
     border: none;
 }
@@ -78,18 +79,37 @@ body {
     margin: 5px 0;
     background-color: #292929;
     border-radius: 3px;
-    display: flex;
-    align-items: center;
     color: #b1b1b1;
     transition: 0.75s ease;
 }
+
 .spisok-afisha:hover {
     margin: 5px -2%;
     transition: 0.75s ease;
 }
 
+.spisok-afisha-blockTop {
+    padding-left: 10px;
+    padding-top: 5px;
+    flex-grow: 2;
+    display: flex;
+}
+
+.spisok-afisha-blockBottom {
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
+    padding-bottom: 5px;
+    padding-left: 10px;
+}
+
 .spisok-afisha-date {
-    flex-grow: 1;
+    display: flex;
+    align-items: flex-end;
+}
+
+.spisok-afisha-date__day {
+    line-height: 27px;
     color: #CEA079;
     font-size: 38px;
     display: flex;
@@ -99,7 +119,7 @@ body {
 
 .spisok-afisha-label {
     flex-grow: 10;
-    padding: 0 30px;
+    padding: 0 15px;
     color: #DBDBDB;
 }
 
@@ -138,6 +158,7 @@ body {
 
 .spisok-afisha-description .fas,
 .far {
+    padding: 0 5px;
     font-size: 14px;
     color: #6c6c6c;
 }
@@ -146,7 +167,7 @@ body {
     display: flex;
     align-self: flex-start;
     justify-content: flex-end;
-    padding: 20px;
+    padding: 5px;
     font-size: 14px;
 }
 
@@ -155,6 +176,7 @@ body {
     padding-top: 60px;
     padding-bottom: 75px;
 }
+
 .postery-card-group {
     justify-content: space-around;
 }
@@ -166,6 +188,7 @@ body {
     border-radius: 10px !important;
     box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.20);
 }
+
 .card-img-top {
     border-radius: 10px 10px 0px 0px !important;
 }
@@ -202,3 +225,26 @@ body {
 }
 
 /*postery*/
+
+
+@media (min-width: 576px) {}
+
+@media (min-width: 768px) {
+    .spisok-afisha-blockTop {
+        padding: 0 30px;
+    }
+}
+
+@media (min-width: 992px) {
+
+
+    .spisok-afisha-label {
+        padding: 0 30px;
+    }
+
+    .spisok-afisha-blockBottom {
+        flex-direction: row;
+    }
+}
+
+@media (min-width: 1200px) {}
